--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,10 +10,11 @@
     <meta name="theme-color" content="#4A90E2">
 
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-mobile-web-app-title" content="PWA DoCa">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="Camera PWA">
+    <link rel="apple-touch-icon" href="./images/icons/192.png">
+    <meta name="permissions-policy" content="camera=*">
 
-    <link rel="apple-touch-icon" href="./images/icons/192.png" sizes="192x192">
     <style>
         /* Galería inferior de miniaturas */
         .gallery {
@@ -21,7 +23,7 @@
             right: 0;
             bottom: 0;
             height: 96px;
-            background: rgba(0,0,0,0.6);
+            background: rgba(0, 0, 0, 0.6);
             display: flex;
             align-items: center;
             gap: 8px;
@@ -35,12 +37,14 @@
             height: 80px;
             border-radius: 4px;
             object-fit: cover;
-            box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
             cursor: pointer;
         }
 
         /* Ajuste para que el canvas no quede oculto por la galería */
-        body { padding-bottom: 110px; }
+        body {
+            padding-bottom: 110px;
+        }
 
         /* Estilos para botones */
         button {
@@ -73,10 +77,11 @@
         }
     </style>
 </head>
+
 <body>
 
     <h1>Cámara PWA</h1>
-    
+
     <button id="openCamera">Abrir Cámara</button>
     <button id="toggleCamera" style="display:none;">Cambiar Cámara</button>
 
@@ -93,4 +98,5 @@
 
     <script src="./app.js"></script>
 </body>
+
 </html>
